--- a/styles/_homePage.scss
+++ b/styles/_homePage.scss
@@ -89,7 +89,7 @@
       }
     }
     .bars {
-      // display: none;
+      display: none;
       position: absolute;
       right: 70px;
       top: 25px;
@@ -114,7 +114,7 @@
     //   rgba(16, 95, 145, 1) 40%,
     //   rgba(255, 0, 83, 1) 100%
     // );
-    background-image: url('../imgs/backgroundHomePage.jpg');
+    background-image: url("../imgs/backgroundHomePage.jpg");
     background-size: cover;
     .sections {
       display: flex;
@@ -216,8 +216,34 @@
   }
   // Mobile version for HomePage and Navbar
 
-// max-width: 768px start
-  @media screen and  (max-width: 768px) {
+  // min-width: 1200px start
+  @media (max-width: 1200px) {
+    .navbar {
+      .logo {
+        top: 27px;
+        left: 200px;
+      }
+      .links {
+        display: block;
+        display: flex;
+      }
+      .bars {
+        display: none;
+      }
+    }
+    .homePageContent{
+      .photo {
+        display: block;
+        top: 100px;
+        left: 700px;
+        width: 400px;
+      }
+    }
+  }
+  // max-width: 1200px end
+
+  // max-width: 768px start
+  @media screen and (max-width: 768px) {
     .navbar {
       .logo {
         top: 27px;
@@ -262,6 +288,52 @@
       }
     }
   }
-  // max-width: 768px end
+  // max-width: 480px end
   // Mobile version for HomePage and Navbar end
+  @media screen and (max-width: 480px) {
+    .navbar {
+      .logo {
+        top: 27px;
+        left: 100px;
+      }
+      .links {
+        display: none;
+      }
+      .bars {
+        display: block;
+      }
+    }
+    .homePageContent {
+      .welcome {
+        // text-align: center;
+        width: 400px;
+        top: 120px;
+        left: -53px;
+        .name {
+          width: 300px;
+          margin-left: 140px;
+          margin-bottom: 20px;
+          margin-top: 40px;
+        }
+        .greeting {
+          width: 450px;
+        }
+        .introducing {
+          // border: 1px solid yellow;
+          width: 480px;
+          margin-left: 70px;
+        }
+        button {
+          margin-left: 190px;
+        }
+      }
+      .photo {
+        display: block;
+        top: 330px;
+        left: 320px;
+        width: 180px;
+      }
+    }
+  }
+  // max-width: 480px start
 }
