--- a/styles/_projectsPage.scss
+++ b/styles/_projectsPage.scss
@@ -95,7 +95,7 @@
     position: relative;
     top: 70px;
     .grid-item {
-      background-image: url("../imgs/clock.PNG");
+      // background-image: url("../imgs/clock.PNG");
       background-size: cover;
       background-repeat: no-repeat;
       border: 1px solid gray;
@@ -116,6 +116,32 @@
         }
       }
     }
+    .digitalClock {
+      background-image: url("../imgs/digitalClock.PNG");
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+    .weatherApp{
+      background-image: url("../imgs/прогнозПогоды.png");
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+    .movieApp{
+      background-image: url("../imgs/кинопоиск.png");
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+    .multipApp{
+      background-image: url("../imgs/играУмножения.png");
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+    .counterApp{
+      background-image: url("../imgs/числовойСчетчик.png");
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+
     .javascriptProject {
       display: none;
     }
@@ -131,6 +157,24 @@
       // border: 1px solid yellow;
       display: grid;
       grid-template-columns: auto auto;
+    }
+  }
+  @media screen and (max-width: 480px) {
+    .grid-container {
+      display: grid;
+      grid-template-columns: auto auto;
+      .grid-item {
+        margin-bottom: 30px;
+        width: 200px;
+        height: 200px;
+        .details {
+          margin-top: 10px;
+          margin-left: 15px;
+          button {
+            margin-left: -5px;
+          }
+        }
+      }
     }
   }
 }
