--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 .homePage {
   height: 100vh;
@@ -81,6 +82,7 @@
   color: black;
 }
 .homePage .navbar .bars {
+  display: none;
   position: absolute;
   right: 70px;
   top: 25px;
@@ -183,6 +185,25 @@
   right: 100px;
   border-radius: 50px;
 }
+@media (max-width: 1200px) {
+  .homePage .navbar .logo {
+    top: 27px;
+    left: 200px;
+  }
+  .homePage .navbar .links {
+    display: block;
+    display: flex;
+  }
+  .homePage .navbar .bars {
+    display: none;
+  }
+  .homePage .homePageContent .photo {
+    display: block;
+    top: 100px;
+    left: 700px;
+    width: 400px;
+  }
+}
 @media screen and (max-width: 768px) {
   .homePage .navbar .logo {
     top: 27px;
@@ -220,6 +241,45 @@
     top: 100px;
     left: 400px;
     width: 400px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .homePage .navbar .logo {
+    top: 27px;
+    left: 100px;
+  }
+  .homePage .navbar .links {
+    display: none;
+  }
+  .homePage .navbar .bars {
+    display: block;
+  }
+  .homePage .homePageContent .welcome {
+    width: 400px;
+    top: 120px;
+    left: -53px;
+  }
+  .homePage .homePageContent .welcome .name {
+    width: 300px;
+    margin-left: 140px;
+    margin-bottom: 20px;
+    margin-top: 40px;
+  }
+  .homePage .homePageContent .welcome .greeting {
+    width: 450px;
+  }
+  .homePage .homePageContent .welcome .introducing {
+    width: 480px;
+    margin-left: 70px;
+  }
+  .homePage .homePageContent .welcome button {
+    margin-left: 190px;
+  }
+  .homePage .homePageContent .photo {
+    display: block;
+    top: 330px;
+    left: 320px;
+    width: 180px;
   }
 }
 
@@ -307,6 +367,73 @@
   right: -90px;
   width: 230px;
 }
+@media screen and (max-width: 1200px) {
+  .aboutMePage .headings {
+    margin-left: 300px;
+  }
+  .aboutMePage .headings .aboutName {
+    margin-left: -130px;
+  }
+  .aboutMePage .headings .skillsName {
+    margin-left: -430px;
+  }
+  .aboutMePage .aboutMeSections .aboutMeContent {
+    margin-top: -30px;
+    width: 570px;
+    margin-left: 10px;
+  }
+  .aboutMePage .aboutMeSections .aboutMeContent img {
+    width: 300px;
+    margin-top: -10px;
+    margin-right: -10px;
+  }
+  .aboutMePage .aboutMeSections .skillsContent {
+    margin-top: -190px;
+    margin-left: 0px;
+  }
+  .aboutMePage .aboutMeSections .skillsContent .html {
+    top: 170px;
+    left: 120px;
+    width: 90px;
+  }
+  .aboutMePage .aboutMeSections .skillsContent .css {
+    width: 80px;
+    top: 170px;
+    left: 140px;
+  }
+  .aboutMePage .aboutMeSections .skillsContent .js {
+    top: 176px;
+    left: 120px;
+    width: 180px;
+  }
+  .aboutMePage .aboutMeSections .skillsContent .mongo {
+    top: 280px;
+    left: 150px;
+    width: 220px;
+  }
+  .aboutMePage .aboutMeSections .skillsContent .node {
+    top: 300px;
+    right: 250px;
+    width: 150px;
+  }
+  .aboutMePage .aboutMeSections .skillsContent .typescript {
+    top: 200px;
+    right: -70px;
+    width: 100px;
+  }
+  .aboutMePage .aboutMeSections .skillsContent .sass {
+    display: none;
+    top: 170px;
+    right: 100px;
+    width: 120px;
+  }
+  .aboutMePage .aboutMeSections .skillsContent .bootstrap {
+    display: none;
+    top: 150px;
+    right: -90px;
+    width: 200px;
+  }
+}
 @media screen and (max-width: 768px) {
   .aboutMePage .headings .aboutName {
     margin-left: -130px;
@@ -368,6 +495,74 @@
     display: none;
     top: 150px;
     right: -90px;
+    width: 200px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .aboutMePage .headings {
+    margin-top: -30px;
+  }
+  .aboutMePage .headings .aboutName {
+    margin-left: -180px;
+  }
+  .aboutMePage .headings .skillsName {
+    margin-left: -430px;
+  }
+  .aboutMePage .aboutMeSections .aboutMeContent {
+    margin-top: -30px;
+    width: 420px;
+    margin-left: -25px;
+  }
+  .aboutMePage .aboutMeSections .aboutMeContent img {
+    width: 260px;
+    margin-top: -30px;
+    margin-right: -30px;
+    display: none;
+  }
+  .aboutMePage .aboutMeSections .skillsContent {
+    margin-top: -110px;
+    margin-left: -620px;
+  }
+  .aboutMePage .aboutMeSections .skillsContent .html {
+    top: 300px;
+    left: 70px;
+    width: 70px;
+  }
+  .aboutMePage .aboutMeSections .skillsContent .css {
+    width: 63px;
+    top: 300px;
+    left: 140px;
+  }
+  .aboutMePage .aboutMeSections .skillsContent .js {
+    top: 300px;
+    left: 180px;
+    width: 140px;
+  }
+  .aboutMePage .aboutMeSections .skillsContent .mongo {
+    top: 380px;
+    left: -110px;
+    width: 170px;
+  }
+  .aboutMePage .aboutMeSections .skillsContent .node {
+    top: 380px;
+    right: 250px;
+    width: 100px;
+  }
+  .aboutMePage .aboutMeSections .skillsContent .typescript {
+    top: 320px;
+    right: -170px;
+    width: 70px;
+  }
+  .aboutMePage .aboutMeSections .skillsContent .sass {
+    display: none;
+    top: 170px;
+    right: 100px;
+    width: 120px;
+  }
+  .aboutMePage .aboutMeSections .skillsContent .bootstrap {
+    display: none;
+    top: 150px;
+    right: -190px;
     width: 200px;
   }
 }
@@ -614,6 +809,17 @@
 .timelinePage .active {
   display: none;
 }
+.timelinePage .jobandeducationContainer {
+  display: none;
+}
+@media screen and (max-width: 1200px) {
+  .timelinePage .head {
+    display: flex;
+    position: relative;
+    top: -25px;
+    font-weight: 500;
+  }
+}
 @media screen and (max-width: 768px) {
   .timelinePage .head {
     position: absolute;
@@ -626,6 +832,150 @@
   .timelinePage .containerJob {
     margin-top: 70px;
     margin-left: 10px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .timelinePage .head {
+    position: absolute;
+    top: 1060px;
+    margin-left: -10px;
+  }
+  .timelinePage .head .education {
+    margin-left: 20px;
+  }
+  .timelinePage .containerJob {
+    display: none;
+  }
+  .timelinePage .container-education {
+    display: none;
+  }
+  .timelinePage .jobandeducationContainer {
+    display: block;
+    margin-top: 30px;
+    margin-left: -110px;
+  }
+  .timelinePage .jobandeducationContainer .jobContainer {
+    display: none;
+    list-style: none;
+  }
+  .timelinePage .jobandeducationContainer .jobContainer li {
+    margin-top: 40px;
+  }
+  .timelinePage .jobandeducationContainer .jobContainer li .dte {
+    background-color: greenyellow;
+    width: 300px;
+    height: 35px;
+    padding: 10px;
+    text-align: center;
+    border-radius: 30px;
+    margin-bottom: 20px;
+  }
+  .timelinePage .jobandeducationContainer .jobContainer li .desc {
+    background-color: white;
+    color: black;
+    width: 300px;
+    height: 55px;
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
+  }
+  .timelinePage .jobandeducationContainer .jobContainer li .dev {
+    padding: 20px;
+  }
+  .timelinePage .jobandeducationContainer .jobContainer li .alfa1 {
+    display: flex;
+    flex-direction: row;
+  }
+  .timelinePage .jobandeducationContainer .jobContainer li .alfa1 img {
+    position: absolute;
+    width: 120px;
+    left: 350px;
+    margin-top: -30px;
+  }
+  .timelinePage .jobandeducationContainer .jobContainer li .alfa2 {
+    display: flex;
+    flex-direction: row;
+  }
+  .timelinePage .jobandeducationContainer .jobContainer li .alfa2 img {
+    position: absolute;
+    width: 120px;
+    left: 350px;
+    margin-top: -30px;
+  }
+  .timelinePage .jobandeducationContainer .jobContainer li .alfa3 {
+    display: flex;
+    flex-direction: row;
+  }
+  .timelinePage .jobandeducationContainer .jobContainer li .alfa3 img {
+    position: absolute;
+    width: 150px;
+    height: 70px;
+    left: 335px;
+    margin-top: -30px;
+  }
+  .timelinePage .jobandeducationContainer .jobContainer li .alfa4 {
+    display: flex;
+    flex-direction: row;
+  }
+  .timelinePage .jobandeducationContainer .jobContainer li .alfa4 img {
+    position: absolute;
+    width: 120px;
+    left: 350px;
+    margin-top: -30px;
+  }
+  .timelinePage .jobandeducationContainer .educationContainer {
+    margin-top: -20px;
+    list-style: none;
+    margin-left: 130px;
+  }
+  .timelinePage .jobandeducationContainer .educationContainer .turan {
+    margin-bottom: 50px;
+  }
+  .timelinePage .jobandeducationContainer .educationContainer .turan .dte {
+    background-color: greenyellow;
+    width: 300px;
+    height: 35px;
+    padding: 10px;
+    text-align: center;
+    border-radius: 30px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+  }
+  .timelinePage .jobandeducationContainer .educationContainer .turan .desc {
+    background-color: white;
+    color: black;
+    width: 300px;
+    height: 55px;
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
+  }
+  .timelinePage .jobandeducationContainer .educationContainer .turan img {
+    width: 250px;
+    margin-bottom: 10px;
+  }
+  .timelinePage .jobandeducationContainer .educationContainer .german .dte {
+    background-color: greenyellow;
+    width: 300px;
+    height: 35px;
+    padding: 10px;
+    text-align: center;
+    border-radius: 30px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+  }
+  .timelinePage .jobandeducationContainer .educationContainer .german .desc {
+    background-color: white;
+    color: black;
+    width: 300px;
+    height: 95px;
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
+  }
+  .timelinePage .jobandeducationContainer .educationContainer .german img {
+    width: 250px;
+    margin-bottom: 10px;
   }
 }
 
@@ -679,7 +1029,6 @@
   top: 70px;
 }
 .projectsPage .grid-container .grid-item {
-  background-image: url("../imgs/clock.PNG");
   background-size: cover;
   background-repeat: no-repeat;
   border: 1px solid gray;
@@ -700,6 +1049,31 @@
   font-size: 18px;
   border-radius: 10px;
 }
+.projectsPage .grid-container .digitalClock {
+  background-image: url("../imgs/digitalClock.PNG");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.projectsPage .grid-container .weatherApp {
+  background-image: url("../imgs/прогнозПогоды.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.projectsPage .grid-container .movieApp {
+  background-image: url("../imgs/кинопоиск.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.projectsPage .grid-container .multipApp {
+  background-image: url("../imgs/играУмножения.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.projectsPage .grid-container .counterApp {
+  background-image: url("../imgs/числовойСчетчик.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 .projectsPage .grid-container .javascriptProject {
   display: none;
 }
@@ -713,6 +1087,24 @@
   .projectsPage .grid-container {
     display: grid;
     grid-template-columns: auto auto;
+  }
+}
+@media screen and (max-width: 480px) {
+  .projectsPage .grid-container {
+    display: grid;
+    grid-template-columns: auto auto;
+  }
+  .projectsPage .grid-container .grid-item {
+    margin-bottom: 30px;
+    width: 200px;
+    height: 200px;
+  }
+  .projectsPage .grid-container .grid-item .details {
+    margin-top: 10px;
+    margin-left: 15px;
+  }
+  .projectsPage .grid-container .grid-item .details button {
+    margin-left: -5px;
   }
 }
 
@@ -894,12 +1286,22 @@
 .contactFormPage .showing {
   opacity: 1;
 }
+@media screen and (max-width: 1200px) {
+  .contactFormPage .contact-box {
+    margin-top: 150px;
+  }
+}
 @media screen and (max-width: 768px) {
   .contactFormPage .contact-box {
     margin-left: -115px;
   }
   .contactFormPage .left {
     height: 200px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .contactFormPage .contactFormPage {
+    height: 300px;
   }
 }
 
